[package]
name = "e2e"
version = "0.1.0"
edition = "2021"
authors = ["Heemank Verma <heemankv@gmail.com>"]

[lib]
name = "e2e"
path = "src/mod.rs"

[dependencies]

async-trait = { workspace = true }

dotenvy = { workspace = true }
env_logger = { workspace = true }
httpmock = { version = "0.8.0-alpha.1", features = ["proxy", "remote"] }
log = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
rstest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
testcontainers = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
