[package]
name = "e2e"
description = "End-to-end testing for Madara Services"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
homepage.workspace = true

[lib]
name = "e2e"
path = "src/mod.rs"

[dependencies]
async-trait = { workspace = true }
dotenvy = { workspace = true }
dotenv = { workspace = true }
env_logger = { workspace = true }
fs_extra = { workspace = true }
httpmock = { version = "0.8.0-alpha.1", features = ["proxy", "remote"] }
log = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
rstest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
testcontainers = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
