[package]
name = "e2e"
description = "End-to-end testing for Madara Services"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
homepage.workspace = true

[lib]
name = "e2e"
path = "src/mod.rs"

[dependencies]
alloy = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
color-eyre = { workspace = true }
dotenvy = { workspace = true }
env_logger = { workspace = true }
fs_extra = "1.3.0"
httpmock = { version = "0.8.0-alpha.1", features = ["proxy", "remote"] }
lazy_static = { version = "1.4", default-features = false }
log = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
rstest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
testcontainers = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

starknet-core = "0.11"
starknet-crypto = "0.7"
starknet-providers = "0.11"
starknet-signers = "0.9"
starknet-accounts = "0.11.0"
starknet = "0.11.0"
