[package]
name = "madara"
description = "Madara node"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
homepage.workspace = true
build = "node/build.rs"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "madara"
path = "node/src/main.rs"

[dependencies]
# Database
bonsai-trie.workspace = true
librocksdb-sys.workspace = true
rocksdb.workspace = true

# Madara proc macros
m-proc-macros.workspace = true

# Madara primitives
mp-block.workspace = true
mp-chain-config.workspace = true
mp-class.workspace = true
mp-convert.workspace = true
mp-gateway.workspace = true
mp-oracle.workspace = true
mp-receipt.workspace = true
mp-rpc.workspace = true
mp-state-update.workspace = true
mp-transactions.workspace = true
mp-utils.workspace = true

# Madara client
mc-block-production.workspace = true
mc-class-exec.workspace = true
mc-db.workspace = true
mc-devnet.workspace = true
mc-exec.workspace = true
mc-external-db.workspace = true
mc-gateway-client.workspace = true
mc-gateway-server.workspace = true
mc-mempool.workspace = true
mc-rpc.workspace = true
mc-settlement-client.workspace = true
mc-submit-tx.workspace = true
mc-sync.workspace = true
mc-telemetry.workspace = true

# Starknet dependencies
blockifier.workspace = true
cairo-lang-starknet-classes.workspace = true
cairo-lang-utils.workspace = true
cairo-vm.workspace = true
starknet.workspace = true
starknet-accounts.workspace = true
starknet-contract.workspace = true
starknet-core.workspace = true
starknet-crypto.workspace = true
starknet-providers.workspace = true
starknet-signers.workspace = true
starknet-types-core.workspace = true
starknet_api.workspace = true

# Other
alloy.workspace = true
anyhow.workspace = true
async-trait.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
derive_more = { workspace = true, features = ["from_str"] }
dotenv.workspace = true
fdlimit.workspace = true
figment = { workspace = true, features = ["toml", "json", "yaml"] }
futures = { workspace = true, features = ["thread-pool"] }
governor.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper = { version = "0.14", features = ["server"] }
hyper-tls.workspace = true
hyper-util.workspace = true
ip_network.workspace = true
jsonrpsee.workspace = true
rand.workspace = true
rayon.workspace = true
regex.workspace = true
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_with.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower.workspace = true
tower-http.workspace = true
url.workspace = true

# Instrumentation
opentelemetry = { workspace = true, features = ["metrics", "logs"] }
opentelemetry-appender-tracing = { workspace = true, default-features = false }
opentelemetry-otlp = { workspace = true, features = [
  "grpc-tonic",
  "metrics",
  "logs",
] }
opentelemetry-semantic-conventions = { workspace = true }
opentelemetry-stdout = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio", "logs"] }
tracing = { workspace = true }
tracing-core = { workspace = true, default-features = false }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
# Core
mc-e2e-tests = { workspace = true }

# Primitives
mp-bloom-filter = { workspace = true }
mp-class = { workspace = true }
mp-convert = { workspace = true }
mp-gateway = { workspace = true }
mp-receipt = { workspace = true }
mp-transactions = { workspace = true }
mp-utils = { workspace = true }

# Testing
assert_matches.workspace = true
httpmock.workspace = true
mockall.workspace = true
proptest.workspace = true
proptest-derive.workspace = true
proptest-state-machine.workspace = true
rstest.workspace = true
tempfile.workspace = true

# Misc
base64.workspace = true
bigdecimal.workspace = true
bincode.workspace = true
bitvec.workspace = true
bytes.workspace = true
crypto-bigint.workspace = true
flate2.workspace = true
indoc.workspace = true
itertools.workspace = true
lazy_static.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
once_cell.workspace = true
paste.workspace = true
primitive-types.workspace = true
proc-macro2.workspace = true
quote.workspace = true
sha3.workspace = true
syn.workspace = true
zeroize.workspace = true

[features]
default = []
