[package]
name = "blockgen"
description = "Deoxys test block generator"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
homepage.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]

# Deoxys
dc-sync = { workspace = true }
dp-block = { workspace = true }
dp-class = { workspace = true }
dp-receipt = { workspace = true }
dp-state-update = { workspace = true }
dp-transactions = { workspace = true }

# Starknet
starknet-core = { workspace = true }
starknet-types-core = { workspace = true }

# Other
indexmap = { workspace = true }
rand = "0.8"
