[package]
name = "db-explorer"
authors.workspace = true
edition.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb.workspace = true
clap = { workspace = true, features = ["derive"] }
mc-db.workspace = true
anyhow.workspace = true
log.workspace = true
env_logger = "0.11.3"
