[package]
name = "deoxys"
description = "Deoxys node"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
homepage.workspace = true
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "deoxys"

[dependencies]

# Deoxys
dc-db = { workspace = true }
dc-eth = { workspace = true }
dc-mempool = { workspace = true }
dc-metrics = { workspace = true }
dc-rpc = { workspace = true }
dc-sync = { workspace = true }
dc-telemetry = { workspace = true }
dp-block = { workspace = true }
dp-convert = { workspace = true }
dp-utils = { workspace = true }

# Starknet
starknet-providers = { workspace = true }
starknet_api = { workspace = true }

# Other
alloy = { workspace = true }
anyhow.workspace = true
async-trait = { workspace = true }
chrono = "0.4.38"
clap = { workspace = true, features = ["derive"] }
env_logger = { workspace = true }
fdlimit = { workspace = true }
forwarded-header-value = "0.1.1"
futures = { workspace = true, features = ["thread-pool"] }
governor.workspace = true
hyper.workspace = true
ip_network.workspace = true
jsonrpsee.workspace = true
log = { workspace = true }
primitive-types = { workspace = true }
rayon.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
tower-http.workspace = true
tower.workspace = true
url = { workspace = true }

[features]
default = []
sound = ["dc-sync/m"]
