[package]
name = "madara"
description = "Madara node"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
homepage.workspace = true
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "madara"

[dependencies]

# Madara
mc-block-import = { workspace = true }
mc-db = { workspace = true }
mc-devnet = { workspace = true }
mc-eth = { workspace = true }
mc-mempool = { workspace = true }
mc-metrics = { workspace = true }
mc-rpc = { workspace = true }
mc-sync = { workspace = true }
mc-telemetry = { workspace = true }
mp-block = { workspace = true }
mp-chain-config = { workspace = true }
mp-convert = { workspace = true }
mp-utils = { workspace = true }

# Starknet
blockifier = { workspace = true }
starknet-core = { workspace = true }
starknet-providers = { workspace = true }
starknet_api = { workspace = true }

# Other
alloy = { workspace = true }
anyhow.workspace = true
async-trait = { workspace = true }
chrono = "0.4.38"
clap = { workspace = true, features = ["derive"] }
env_logger.workspace = true
fdlimit.workspace = true
forwarded-header-value = "0.1.1"
futures = { workspace = true, features = ["thread-pool"] }
governor.workspace = true
hyper.workspace = true
ip_network.workspace = true
jsonrpsee.workspace = true
log = { workspace = true }
primitive-types.workspace = true
rand = { workspace = true }
rayon.workspace = true
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
tower-http.workspace = true
tower.workspace = true
url = { workspace = true }

[features]
default = []
sound = ["mc-sync/m"]
